--- a/reports/JeanBLapierreSandbox Report/index.html
+++ b/reports/JeanBLapierreSandbox Report/index.html
@@ -8934,6 +8934,7 @@
 													<li class="tree-element "><a href="id-8aa550a3f57941e69cfd20a06a01e15b/views/id-86e3004b7db84fe4b9efb7d079404743.html" target="view"> GC-ESDC PIB Overview </a></li>
 													<li class="tree-element "><a href="id-8aa550a3f57941e69cfd20a06a01e15b/views/id-de716d7a6f1e41faa6ef28d21199973c.html" target="view"> EDFP WG ToR </a></li>
 													<li class="tree-element "><a href="id-8aa550a3f57941e69cfd20a06a01e15b/views/id-4144d02ee25f41bcaf4ced05744e7a8d.html" target="view"> ESDC Data Strategy 2023-26 </a></li>
+													<li class="tree-element "><a href="id-8aa550a3f57941e69cfd20a06a01e15b/views/id-ddc5fbcff44b461294b6c8144b3283bb.html" target="view"> ESDC Data Strategy 2023-26 (EDFP) </a></li>
 
 									</ul>
 									</li><li class="tree-folder "><span><i class="glyphicon glyphicon-triangle-right"></i> GC Language </span>
